cleaned a bit the project structure by removing unused files and grouping documents together

--- a/be_healthy.html
+++ b/be_healthy.html
@@ -4,7 +4,6 @@
 		<link rel="stylesheet" href="style/resets.css"/>
 		<link rel="stylesheet" href="style/layout.css"/>
 		<link rel="stylesheet" href="style/project_typography.css"/>
-		<link rel="stylesheet" href="style/be_healthy.css"/>
 
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'/>
@@ -63,7 +62,7 @@
 
 		<div id="left_panel">
 			<div id="photo_container">
-				<img id="profile_photo" src="img/profile_photo2.png"/>
+				<img id="profile_photo" src="img/profile_photo.png"/>
 				<div id="summary"><span id="name">Ovidiu Berdila</span><br><span id="statement">I like to design simple and elegant solutions for complex problems.</span></div>
 			</div>
 			<div id="menu">
