--- a/test_history.html
+++ b/test_history.html
@@ -61,7 +61,7 @@
 
 		<div id="left_panel">
 			<div id="photo_container">
-				<img id="profile_photo" src="img/profile_photo2.png"/>
+				<img id="profile_photo" src="img/profile_photo.png"/>
 				<div id="summary"><span id="name">Ovidiu Berdila</span><br><span id="statement">I like to design simple and elegant solutions for complex problems.</span></div>
 			</div>
 			<div id="menu">
