finalized sketches for quesee project

--- a/quesee.html
+++ b/quesee.html
@@ -124,11 +124,11 @@
 
                 <p>The tree would display two different groupings of the collection of tests (by Component and by Suite) and would also provide contextual actions on mouse over for each type of item.</p>
 
-				<!-- picture here -->
+                <a class="fancybox" rel="sketches" title="Test grouping" href="img/quesee/after/sketches/explorer.jpg"><img  id="sketches_4" src="img/quesee/after/sketches/explorer.jpg" alt="" style="width : 300px;"/></a>
 
 				<p>I also wanted to have the most important actions like running, recording and reports easy to access and have the state of the application visible at all times.</p>
 
-				<!-- picture here -->
+                <a class="fancybox" rel="sketches" title="Replaying and recording tests" href="img/quesee/after/sketches/motion.jpg"><img  id="sketches_5" src="img/quesee/after/sketches/motion.jpg" alt="" /></a>
 
 				<h2>WIREFRAMES</h2>
 
