removed branding from images and added before version of quesee to the article

--- a/quesee.html
+++ b/quesee.html
@@ -88,7 +88,12 @@
 
 				<p>In a nutshell, this is a record/replay tool for the communication between the components of the system. The communication consists of serialized Java objects that are passed between components on specific requests. The tool is based on the idea that recordings will be done when the system is in a stable state and those recordings will be compared against the traffic within the system at a future date to make sure nothing changed or to spot what changed.</p>
 
-				<a class="fancybox" rel="storyboards" title="Cooking a nice dinner" href="img/hci_project/hand drawn/cooking_storyboard_full_size.jpg"><img id="function_candidates_1" src="img/hci_project/hand drawn/cooking_storyboard_stripe.jpg" alt="" /></a>
+				<a class="fancybox" rel="before" title="Homepage" href="img/quesee/before/homepage.png"><img class="gallery3" id="before_1" src="img/quesee/before/homepage.png" alt="" /></a>
+				<a class="fancybox" rel="before" title="Scenarios" href="img/quesee/before/scenarios.png"><img class="gallery3" id="before_4" src="img/quesee/before/scenarios.png" alt="" /></a>
+				<a class="fancybox" rel="before" title="Scenario view" href="img/quesee/before/scenario-view.png"><img class="gallery3" id="before_3" src="img/quesee/before/scenario-view.png" alt="" /></a>
+				<a class="fancybox" rel="before" title="Scenario run" href="img/quesee/before/scenario-run.png"><img class="gallery3" id="before_2" src="img/quesee/before/scenario-run.png" alt="" /></a>
+				<a class="fancybox" rel="before" title="Test view" href="img/quesee/before/test-view.png"><img class="gallery3" id="before_5" src="img/quesee/before/test-view.png" alt="" /></a>
+				<a class="fancybox" rel="before" title="Test run" href="img/quesee/before/test-run.png"><img class="gallery3" id="before_6" src="img/quesee/before/test-run.png" alt="" /></a>
 
 				<p>For those of you not familiar with test automation, I will describe it to you in a nutshell.</p>
 
@@ -135,9 +140,15 @@
 				<p>After having a clearer idea of how I wanted the application to look like, I created a series of wireframes in order to communicate with the remote team I was working for and ask for their feedback.</p>
 
 				<!-- mention balsamiq -->
-				<!-- picture here -->
+                <a class="fancybox" rel="wireframes" title="Suite selection" href="img/quesee/after/wireframes/1.suite_view.png"><img class="gallery3" id="wireframes_1" src="img/quesee/after/wireframes/1.suite_view.png" alt="" /></a>
+                <a class="fancybox" rel="wireframes" title="Scenario selection" href="img/quesee/after/wireframes/2.scenario%20view.png"><img class="gallery3" id="wireframes_2" src="img/quesee/after/wireframes/2.scenario%20view.png" alt="" /></a>
+                <a class="fancybox" rel="wireframes" title="Test selection" href="img/quesee/after/wireframes/3.step_view.png"><img class="gallery3" id="wireframes_3" src="img/quesee/after/wireframes/3.step_view.png" alt="" /></a>
 
-				<!-- talk about the JSON tree and about the progressive disclosure which is key in solving the performance problem -->
+				<p>talk about the JSON tree and about the progressive disclosure which is key in solving the performance problem </p>
+
+                <a class="fancybox" rel="wireframes" title="Run all tests" href="img/quesee/after/wireframes/4.run_all_view.png"><img class="gallery3" id="wireframes_4" src="img/quesee/after/wireframes/4.run_all_view.png" alt="" /></a>
+                <a class="fancybox" rel="wireframes" title="Record tests" href="img/quesee/after/wireframes/5.record_colapsed_view.png"><img class="gallery3" id="wireframes_5" src="img/quesee/after/wireframes/5.record_colapsed_view.png" alt="" /></a>
+                <a class="fancybox" rel="wireframes" title="Recorded test expanded" href="img/quesee/after/wireframes/6.record_expanded_view.png"><img class="gallery3" id="wireframes_6" src="img/quesee/after/wireframes/6.record_expanded_view.png" alt="" /></a>
 
 				<p>As you can see, the wireframes are not complete and do not cover all the possible scenarios, but this was enough to get the conversation started, get some feedback and start to develop the new user interface.</p>
 
@@ -147,7 +158,7 @@
 
 		        <p>It took more than a few months for the design to come to life and there were a lot of tiny additional decisions that were made along the line to accommodate all the requirements.</p>
 
-				<!-- picture here -->
+				<a class="fancybox" rel="implementation" title="Run all tests" href="img/quesee/after/implementation/5.running_tests.png"><img class="gallery3" id="impementation_1" src="img/quesee/after/implementation/5.running_tests.png" alt="" /></a>
 
 				<!-- talk about the comparison view -->
 
