added implementation pictures to quesee article

--- a/quesee.html
+++ b/quesee.html
@@ -158,7 +158,15 @@
 
 		        <p>It took more than a few months for the design to come to life and there were a lot of tiny additional decisions that were made along the line to accommodate all the requirements.</p>
 
-				<a class="fancybox" rel="implementation" title="Run all tests" href="img/quesee/after/implementation/5.running_tests.png"><img class="gallery3" id="impementation_1" src="img/quesee/after/implementation/5.running_tests.png" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Suite view" href="img/quesee/after/implementation/1.suite_view.PNG"><img class="gallery3" id="impementation_1" src="img/quesee/after/implementation/1.suite_view.PNG" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Scenario view" href="img/quesee/after/implementation/2.scenario_view.PNG"><img class="gallery3" id="impementation_2" src="img/quesee/after/implementation/2.scenario_view.PNG" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Test view" href="img/quesee/after/implementation/3.test_step_view.PNG"><img class="gallery3" id="impementation_3" src="img/quesee/after/implementation/3.test_step_view.PNG" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Test editing" href="img/quesee/after/implementation/4.test_step_editing.PNG"><img class="gallery3" id="impementation_4" src="img/quesee/after/implementation/4.test_step_editing.PNG" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Run all tests" href="img/quesee/after/implementation/5.running_tests.png"><img class="gallery3" id="impementation_5" src="img/quesee/after/implementation/5.running_tests.png" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Test failure" href="img/quesee/after/implementation/6.exploring_test_failure.png"><img class="gallery3" id="impementation_6" src="img/quesee/after/implementation/6.exploring_test_failure.png" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Recording tests" href="img/quesee/after/implementation/7.recording_sceanrio.PNG"><img class="gallery3" id="impementation_7" src="img/quesee/after/implementation/7.recording_sceanrio.PNG" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Reports" href="img/quesee/after/implementation/8.reports_view.PNG"><img class="gallery3" id="impementation_8" src="img/quesee/after/implementation/8.reports_view.PNG" alt="" /></a>
+				<a class="fancybox" rel="implementation" title="Reports expanded" href="img/quesee/after/implementation/9.reports_expanded.PNG"><img class="gallery3" id="impementation_9" src="img/quesee/after/implementation/9.reports_expanded.PNG" alt="" /></a>
 
 				<!-- talk about the comparison view -->
 
