modified quesee comparison images

--- a/quesee.html
+++ b/quesee.html
@@ -176,9 +176,9 @@
 
                 <p>In order to make the comparison work along the progressive disclosure nature of the tree, the changes need to bubble up so that the user knows how to drill down in order to find them. This is done by adding a red dotted underline to the element that needs to be expanded in order to find the change. I used the same visual cue found in most spell checkers to convey that something is wrong.</p>
 
-                <a class="fancybox" rel="comparison" title="Test failure" href="img/quesee/after/implementation/6.exploring_test_failure.png"><img class="gallery3" id="comparison_1" src="img/quesee/after/implementation/6.exploring_test_failure.png" alt="" /></a>
-                <a class="fancybox" rel="comparison" title="Test failure" href="img/quesee/after/implementation/6.exploring_test_failure.png"><img class="gallery3" id="comparison_2" src="img/quesee/after/implementation/6.exploring_test_failure.png" alt="" /></a>
-                <a class="fancybox" rel="comparison" title="Test failure" href="img/quesee/after/implementation/6.exploring_test_failure.png"><img class="gallery3" id="comparison_3" src="img/quesee/after/implementation/6.exploring_test_failure.png" alt="" /></a>
+                <a class="fancybox" rel="comparison" title="Test failure" href="img/quesee/after/implementation/6.exploring_test_failure1.png"><img class="gallery3" id="comparison_1" src="img/quesee/after/implementation/6.exploring_test_failure1.png" alt="" /></a>
+                <a class="fancybox" rel="comparison" title="Test failure" href="img/quesee/after/implementation/6.exploring_test_failure2.png"><img class="gallery3" id="comparison_2" src="img/quesee/after/implementation/6.exploring_test_failure2.png" alt="" /></a>
+                <a class="fancybox" rel="comparison" title="Test failure" href="img/quesee/after/implementation/6.exploring_test_failure3.png"><img class="gallery3" id="comparison_3" src="img/quesee/after/implementation/6.exploring_test_failure3.png" alt="" /></a>
 
 				<!-- talk about the history view and give a link to the article -->
 
