added more content to quesee conclusions

--- a/quesee.html
+++ b/quesee.html
@@ -186,9 +186,10 @@
                 <p>I have written a different article about the <a href="test_history.html">history chart</a> since there is an interesting design story behind it.</p>
 
 				<h2>CONCLUSION</h2>
-				<p>The tool is now being used by the QA team</p>
-				<p>Most of the complaints were about the back-end functionality. There were some things related to the UI, like the history chart that became unusable until redesigned and the colours that were being used in the comparison view</p>
-				<p>Talk about the future improvements</p>
+				<p>The tool has been adopted by the QA team and it is in use for most than a year at the time I wrote this article.</p>
+				<p>Most of the complaints were related to the back-end functionality. There were also some things related to the user interface, like the history chart that became unusable until redesigned and the colours that were being used in the comparison view and were creating confusion for some of the users.</p>
+				<p>Even though the tool is in a pretty good shape, there are some future improvements that are requested by the users, like a side by side comparison view, a way of editing the expected result directly from the comparison view, hide the actions that are not allowed in some scenarios, drag and drop support in the test explorer tree for moving scenarios between suites, search and filter the test explorer tree, display reports as a hierarchy instead of a flat list, etc.</p>
+                <p>All in all, I had a great time designing, implementing and improving this tool and I sure learned a lot during the process.</p>
 			</div>
 		</div>
 	</body>
