small improvements to the quesee article content

--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,26 @@
 			</div>
 
 			<div id="projects_list">
+
+                <div class="project">
+                    <div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+                        <a  class="bottom"href="quesee.html">
+                            <img src="img/quesee/thumbnail.png"/>
+                        </a>
+                        <div class="overlay">
+                            <div class="overlay_inner">
+                                <div class="topics">
+                                    <div class="topic">CODE</div>
+                                    <div class="topic">WIREFRAMES</div>
+                                    <div class="topic">VISUAL DESIGN</div>
+                                    <div class="topic">USER TESTING</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_title">Quesee - a different kind of Test Automation tool</div>
+                </div>
+
 				<div class="project">
 					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
 						<a class="bottom" href="function_candidates.html" >
@@ -116,26 +136,7 @@
 					</div>
 					<div class="project_title">HCI Course Project</div>
 				</div>
-				
-				<div class="project">
-					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
-						<a  class="bottom"href="quesee.html">
-							<img src="img/quesee/thumbnail.png"/>
-						</a>
-						<div class="overlay"> 
-							<div class="overlay_inner"> 
-								<div class="topics">
-									<div class="topic">CODE</div>
-									<div class="topic">WIREFRAMES</div>
-									<div class="topic">VISUAL DESIGN</div>
-									<div class="topic">USER TESTING</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="project_title">Quesee</div>
-				</div>
-				
+
 				<div class="project">
 					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
 						<a  class="bottom"href="curation.html">
